--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "casa-corrently-ipfs-edge",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Casa Corrently IPFS based Edge",
-  "main": "standalone.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
